--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,7 @@ language: groovy
 sudo: false
 
 jdk:
-  - oraclejdk8
+  - openjdk11
 
 before_cache:
   - rm -f $HOME/.gradle/caches/modules-2/modules-2.lock
