Fix a broken test on Travis. The pcwd command copies the path to the clipboard and the clipboard does not exist in a server environment.

--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -10,6 +10,7 @@ node {
 }
 
 task env(type: NpxTask) {
+    dependsOn npmInstall
     command = "printenv"
     outputs.upToDateWhen {
         true
@@ -17,7 +18,9 @@ task env(type: NpxTask) {
 }
 
 task pwd(type: NpxTask) {
-    command = "pcwd"
+    dependsOn npmInstall
+    command = "jseval"
+    args = ["console.log(`Working directory is '\${process.cwd()}'`);"]
     outputs.upToDateWhen {
         true
     }
