--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ apply plugin: 'maven'
 apply plugin: 'maven-publish'
 apply plugin: 'java-gradle-plugin'
 
-ext.nextVersion = 'major'
+ext.nextVersion = 'minor'
 apply plugin: 'com.cinnober.gradle.semver-git'
 
 apply from: "$rootDir/gradle/additional-artifacts.gradle"
