--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     testCompile 'cglib:cglib-nodep:3.2.9'
     testCompile 'org.apache.commons:commons-io:1.3.2'
     testCompile('org.spockframework:spock-core:1.3-groovy-2.5')
+    testCompile('com.github.stefanbirkner:system-rules:1.19.0')
 }
 
 tasks.withType( Test ) {
