--- a/build.gradle
+++ b/build.gradle
@@ -45,4 +45,5 @@ test {
     {
         exclude '**/*_integTest*'
     }
+    maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
 }
