Fix the broken build. Add a test case in the integration tests that ensure the NodeTask accepts a directory in which Node.js will look for a file to execute (index.js for instance).

--- a/src/test/resources/fixtures/node/build.gradle
+++ b/src/test/resources/fixtures/node/build.gradle
@@ -25,3 +25,7 @@ if (changeScript) {
 if (changeArgs) {
     hello.args = ["Bob", "Alice"]
 }
+
+task helloFromIndex(type: NodeTask) {
+    script = file(".")
+}
