Fix issue #41. Improve the NodeTask's script input declaration. @InputFile is enough, we don't need @InputFiles. In the case the script is a directory, we consider it to be the index.js file of this directory. This avoids a backward-compatibility break but logs a warning message to indicate that it will be removed in the next major version.

--- a/src/test/resources/fixtures/node/build.gradle
+++ b/src/test/resources/fixtures/node/build.gradle
@@ -28,4 +28,7 @@ if (changeArgs) {
 
 task helloFromIndex(type: NodeTask) {
     script = file(".")
+    outputs.upToDateWhen {
+        true
+    }
 }
