Add version check for Node.js, npm and yarn in tests when the version is forced or by default.

--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -3,8 +3,6 @@ plugins {
 }
 
 node {
-    version = "10.14.0"
-    npmVersion = "6.4.1"
     download = true
     workDir = file("build/node")
 }
@@ -46,4 +44,8 @@ if (fail) {
 
 if (ignoreExitValue) {
     env.ignoreExitValue = true
+}
+
+task version(type: NodeTask) {
+    script = file("version.js")
 }
