--- a/src/test/resources/fixtures/npx/build.gradle
+++ b/src/test/resources/fixtures/npx/build.gradle
@@ -4,7 +4,7 @@ plugins {
 
 node {
     version = "10.14.0"
-    npmVersion = "6.4.1"
+    npmVersion = "6.12.0"
     download = true
     workDir = file("build/node")
 }
@@ -44,6 +44,11 @@ task cwd(type: NpxTask) {
     outputs.upToDateWhen {
         true
     }
+}
+
+task version(type: NpxTask) {
+    dependsOn npmInstall
+    command = "--version"
 }
 
 if (isPropertyEnabled("changeInputs")) {
