--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ plugins {
 	id('maven-publish')
 	id('org.gradle.kotlin.kotlin-dsl') version "1.3.1"
 	id('com.cinnober.gradle.semver-git') version "2.4.0"
+	id('org.sonarqube') version "2.8"
 }
 
 group = 'com.github.node-gradle'
@@ -33,6 +34,12 @@ dependencies {
 	testImplementation 'org.apache.commons:commons-io:1.3.2'
 	testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
 	testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
+}
+
+sonarqube {
+	properties {
+		property "sonar.projectKey", "node-gradle_gradle-node-plugin"
+	}
 }
 
 tasks.withType( Test ) {
