--- a/.travis.yml
+++ b/.travis.yml
@@ -15,7 +15,7 @@ cache:
 script:
   - travis_wait 30 ./gradlew ci
   - ./gradlew -p examples build
-  - travis_wait 30 ./gradlew sonarqube
+  - 'if [ "$TRAVIS_PULL_REQUEST" = "false" ]; then travis_wait 30 ./gradlew sonarqube; fi'
 
 addons:
   sonarcloud:
