--- a/build.gradle
+++ b/build.gradle
@@ -16,7 +16,7 @@ ext.nextVersion = 'minor'
 
 apply from: "$rootDir/gradle/additional-artifacts.gradle"
 apply from: "$rootDir/gradle/coverage.gradle"
-apply from: "$rootDir/gradle/travis-ci.gradle"
+apply from: "$rootDir/gradle/ci.gradle"
 apply from: "$rootDir/gradle/publishing.gradle"
 
 ext.compatibilityVersion = '1.8'
