--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ apply plugin: 'com.cinnober.gradle.semver-git'
 
 apply from: "$rootDir/gradle/additional-artifacts.gradle"
 apply from: "$rootDir/gradle/coverage.gradle"
-apply from: "$rootDir/gradle/travis-ci.gradle"
+apply from: "$rootDir/gradle/ci.gradle"
 apply from: "$rootDir/gradle/publishing.gradle"
 
 ext.compatibilityVersion = '1.8'
