Remove the ability to declare a directory as node task input. In this case, the index.js file was executed if it existed. We no longer accept a directory, Gradle will not accept it. This started to be deprecated in the 2.x branch.

--- a/examples/simple-node/build.gradle
+++ b/examples/simple-node/build.gradle
@@ -5,8 +5,8 @@ node {
     download = true
 }
 
-task helloWorld( type: NodeTask, dependsOn: 'npmInstall' ) {
-    script = file( 'src/node' )
+task helloWorld(type: NodeTask, dependsOn: 'npmInstall') {
+    script = file('src/node/index.js')
 }
 
 task build(dependsOn: 'helloWorld') {
