--- a/examples/simple-yarn/build.gradle
+++ b/examples/simple-yarn/build.gradle
@@ -5,8 +5,8 @@ node {
     download = true
 }
 
-task helloWorld( type: NodeTask, dependsOn: 'yarn' ) {
-    script = file( 'src/node' )
+task helloWorld(type: NodeTask, dependsOn: 'yarn') {
+    script = file('src/node/index.js')
 }
 
 task build(dependsOn: 'helloWorld') {
