Rename base package. com.moowork makes no longer sense since the forked project is no longer maintained and the two projects differ too much. We can break backward compatibility with version 3.x change, it's the reason why we do it now.

--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ gradlePlugin {
 	plugins {
 		nodePlugin {
 			id = "com.github.node-gradle.node"
-			implementationClass = "com.moowork.gradle.node.NodePlugin"
+			implementationClass = "com.github.gradle.node.NodePlugin"
 		}
 	}
 }
