--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     testImplementation 'org.apache.commons:commons-io:1.3.2'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
+    testImplementation 'org.assertj:assertj-core:3.15.0'
 }
 
 tasks.withType(Test) {
