Issue #76: add some tests to ensure that GStrings work as expected when declaring environment variables.

--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -31,7 +31,8 @@ if (changeOptions) {
 }
 
 if (changeEnv) {
-    env.environment = ["CUSTOM": "custom environment value"]
+    def qualifier = "custom"
+    env.environment = [CUSTOM: "${qualifier} value"]
 }
 
 if (changeWorkingDir) {
