--- a/src/test/resources/fixtures/npm-env/build.gradle
+++ b/src/test/resources/fixtures/npm-env/build.gradle
@@ -49,6 +49,12 @@ if (isPropertyEnabled("customWorkingDir")) {
     pwd.workingDir = file("${project.buildDir}/customWorkingDirectory/")
 }
 
+if (isPropertyEnabled("outputFile")) {
+    env.execOverrides {
+        it.standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
+    }
+}
+
 def isPropertyEnabled(name) {
     def property = System.properties[name]
     return property == "true"
