--- a/build.gradle
+++ b/build.gradle
@@ -28,12 +28,16 @@ repositories {
 }
 
 dependencies {
+    testImplementation platform('org.junit:junit-bom:5.6.1')
+    testImplementation 'org.junit.jupiter:junit-jupiter-api'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testRuntimeOnly 'org.junit.vintage:junit-vintage-engine'
+    testImplementation 'org.assertj:assertj-core:3.15.0'
     testImplementation 'cglib:cglib-nodep:3.2.9'
     testImplementation 'org.objenesis:objenesis:3.1'
     testImplementation 'org.apache.commons:commons-io:1.3.2'
     testImplementation 'org.spockframework:spock-core:1.3-groovy-2.5'
     testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
-    testImplementation 'org.assertj:assertj-core:3.15.0'
 }
 
 tasks.withType(Test) {
@@ -44,6 +48,7 @@ tasks.withType(Test) {
 }
 
 test {
+    useJUnitPlatform()
     if (project.hasProperty('skipIT')) {
         exclude '**/*_integTest*'
     }
