Issue #39: add a test to ensure that we can use the lazy configuration API with all tasks.

--- a/src/test/resources/fixtures/npm/build.gradle
+++ b/src/test/resources/fixtures/npm/build.gradle
@@ -14,9 +14,9 @@ task test(type: NpmTask) {
     dependsOn npmInstall
     npmCommand = changeInputs ? ['run', 'test'] : ['run']
     args = changeInputs ? [] : ['test']
-    inputs.dir('node_modules')
     inputs.file('package.json')
-    inputs.files('index.js', 'test.js')
+    inputs.dir('src')
+    inputs.dir('test')
     outputs.upToDateWhen {
         true
     }
