Fix the build Github action on Windows to ensure it fails when the build fails.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,11 +10,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Gradle Version
+        run: ./gradlew --version
+        working-directory: ${{github.workspace}}
       - name: Build
-        run: |
-          ./gradlew --version
-          ./gradlew ci
-          ./gradlew -p examples build
+        run: ./gradlew ci
+        working-directory: ${{github.workspace}}
+      - name: Build Example Projects
+        run: ./gradlew -p examples build
         working-directory: ${{github.workspace}}
   windows:
     runs-on: windows-latest
@@ -25,11 +28,14 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Gradle Version
+        run: ./gradlew --version
+        working-directory: ${{github.workspace}}
       - name: Build
-        run: |
-          ./gradlew --version
-          ./gradlew ci
-          ./gradlew -p examples build
+        run: ./gradlew ci
+        working-directory: ${{github.workspace}}
+      - name: Build Example Projects
+        run: ./gradlew -p examples build
         working-directory: ${{github.workspace}}
   macos:
     runs-on: macos-latest
@@ -40,9 +46,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+      - name: Gradle Version
+        run: ./gradlew --version
+        working-directory: ${{github.workspace}}
       - name: Build
-        run: |
-          ./gradlew --version
-          ./gradlew ci
-          ./gradlew -p examples build
+        run: ./gradlew ci
+        working-directory: ${{github.workspace}}
+      - name: Build Example Projects
+        run: ./gradlew -p examples build
         working-directory: ${{github.workspace}}
