--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -18,7 +18,7 @@ task env(type: NpxTask) {
 task pwd(type: NpxTask) {
     dependsOn npmInstall
     command = "jseval"
-    args = ["console.log(`Working directory is '\${process.cwd()}'`);"]
+    args = ["--", "console.log(`Working directory is '\${process.cwd()}'`);"]
     outputs.upToDateWhen {
         true
     }
