Change the npm package used to test environment variables overriding.

--- a/src/test/resources/fixtures/npm-env/build.gradle
+++ b/src/test/resources/fixtures/npm-env/build.gradle
@@ -9,7 +9,7 @@ node {
 
 task env(type: NpmTask) {
     dependsOn npmInstall
-    npmCommand = ["run", "printenv"]
+    npmCommand = ["run", "print-env"]
     outputs.upToDateWhen {
         true
     }
