--- a/src/test/resources/fixtures/npx/build.gradle
+++ b/src/test/resources/fixtures/npx/build.gradle
@@ -34,7 +34,7 @@ task test(type: NpxTask) {
 }
 
 task env(type: NpxTask) {
-    command = "printenv"
+    command = "print-env"
     outputs.upToDateWhen {
         true
     }
