--- a/src/test/resources/fixtures/yarn-env/build.gradle
+++ b/src/test/resources/fixtures/yarn-env/build.gradle
@@ -9,7 +9,7 @@ node {
 
 task env(type: YarnTask) {
     dependsOn yarn
-    yarnCommand = ["run", "printenv"]
+    yarnCommand = ["run", "print-env"]
     outputs.upToDateWhen {
         true
     }
