--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -9,7 +9,8 @@ node {
 
 task env(type: NpxTask) {
     dependsOn npmInstall
-    command = "printenv"
+    command = "print-env"
+    args = ["PATH", "CUSTOM"]
     outputs.upToDateWhen {
         true
     }
