Change back the execOverride type to a Kotlin lambda. This works in both Kotlin and Groovy DSLs but this is not the way recommended by Gradle (Action): https://docs.gradle.org/current/userguide/kotlin_dsl.html#groovy_closures_from_kotlin

--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -49,7 +49,7 @@ if (ignoreExitValue) {
 }
 
 if (outputFile) {
-    env.execOverrides {
+    env.execOverrides = {
         it.standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
     }
 }
