--- a/src/test/resources/fixtures/yarn-env/build.gradle
+++ b/src/test/resources/fixtures/yarn-env/build.gradle
@@ -50,7 +50,7 @@ if (isPropertyEnabled("customWorkingDir")) {
 }
 
 if (isPropertyEnabled("outputFile")) {
-    env.execOverrides {
+    env.execOverrides = {
         it.standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
     }
 }
