Use Gradle Action instead of Kotlin lambda and Groovy closure for execOverrides and nodeModulesOutputFilter.

--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -48,8 +48,8 @@ if (isPropertyEnabled("customWorkingDir")) {
 }
 
 if (isPropertyEnabled("outputFile")) {
-    env.execOverrides = {
-        it.standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
+    env.execOverrides {
+        standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
     }
 }
 
