--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -49,8 +49,8 @@ if (ignoreExitValue) {
 }
 
 if (outputFile) {
-    env.execOverrides = {
-        it.standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
+    env.execOverrides {
+        standardOutput = new FileOutputStream("${buildDir}/standard-output.txt")
     }
 }
 
