Issue #45. Run tests only using the current Gradle version by default. Add a property to run them using all the Gradle supported versions. The CI still run tests using all Gradle versions.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
         run: ./gradlew --version
         working-directory: ${{github.workspace}}
       - name: Build
-        run: ./gradlew ci
+        run: ./gradlew ci -PtestAllSupportedGradleVersions=true
         working-directory: ${{github.workspace}}
       - name: Build Example Projects
         run: ./gradlew -p examples build
@@ -32,7 +32,7 @@ jobs:
         run: ./gradlew --version
         working-directory: ${{github.workspace}}
       - name: Build
-        run: ./gradlew ci
+        run: ./gradlew ci -PtestAllSupportedGradleVersions=true
         working-directory: ${{github.workspace}}
       - name: Build Example Projects
         run: ./gradlew -p examples build
@@ -50,7 +50,7 @@ jobs:
         run: ./gradlew --version
         working-directory: ${{github.workspace}}
       - name: Build
-        run: ./gradlew ci
+        run: ./gradlew ci -PtestAllSupportedGradleVersions=true
         working-directory: ${{github.workspace}}
       - name: Build Example Projects
         run: ./gradlew -p examples build
