Add $ to variables.

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,5 +17,5 @@ jobs:
         run: ./gradlew build
         working-directory: ${{github.workspace}}
       - name: Publish
-        run: ./gradlew publishPlugins -Pgradle.publish.key={{secrets.PLUGIN_PORTAL_KEY}} -Pgradle.publish.secret={{secrets.PLUGIN_PORTAL_SECRET}}
+        run: ./gradlew publishPlugins -Pgradle.publish.key=${{secrets.PLUGIN_PORTAL_KEY}} -Pgradle.publish.secret=${{secrets.PLUGIN_PORTAL_SECRET}}
         working-directory: ${{github.workspace}}
