--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -9,6 +9,8 @@ jobs:
     steps:
       - name: Checkout Source Code
         uses: actions/checkout@v2
+      - name: Fetch Git Tags
+        run: git fetch --depth=1 origin +refs/tags/*:refs/tags/*
       - name: Install Java
         uses: actions/setup-java@v1
         with:
