--- a/examples/spring-boot-angular/webapp/package.json
+++ b/examples/spring-boot-angular/webapp/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall": "ngcc"
+    "postinstall": "ngcc --tsconfig tsconfig.json --properties es2015"
   },
   "private": true,
   "dependencies": {
