--- a/src/test/resources/fixtures/npm/build.gradle
+++ b/src/test/resources/fixtures/npm/build.gradle
@@ -1,8 +1,10 @@
+import org.gradle.util.GradleVersion
+
 plugins {
     id 'com.github.node-gradle.node'
 }
 
-def changeInputs = System.properties["changeInputs"] ? System.properties["changeInputs"] == 'true' : false
+def changeInputs = isPropertyEnabled("changeInputs")
 
 node {
     npmVersion = "6.12.0"
@@ -25,4 +27,11 @@ task test(type: NpmTask) {
 task version(type: NpmTask) {
     dependsOn npmInstall
     npmCommand = ["--version"]
+}
+
+def isPropertyEnabled(String name) {
+    if (GradleVersion.current() >= GradleVersion.version("6.6")) {
+        return providers.systemProperty(name).forUseAtConfigurationTime().isPresent()
+    }
+    return System.properties[name] != null
 }
