Enable the configuration cache in the examples build.

--- a/.github/workflows/build-examples.yml
+++ b/.github/workflows/build-examples.yml
@@ -13,6 +13,8 @@ jobs:
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build Node.js Scripts Project
-        run: ./gradlew -p examples/simple-node helloWorld
+        run: ./gradlew -p examples/simple-node helloWorld --configuration-cache
       - name: Build Spring Boot Angular Project
-        run: ./gradlew -p examples/spring-boot-angular build
+        run: ./gradlew -p examples/spring-boot-angular build --configuration-cache
+      - name: Rebuild Spring Boot Angular Project to Reuse the Configuration Cache
+        run: ./gradlew -p examples/spring-boot-angular build --configuration-cache
