#134 Simplify the Groovy DSL repository declaration syntax.

--- a/src/test/resources/fixtures/node-fail-on-project-repos-download/settings.gradle
+++ b/src/test/resources/fixtures/node-fail-on-project-repos-download/settings.gradle
@@ -8,10 +8,9 @@ if (GradleVersion.current() >= GradleVersion.version("6.8")) {
 
             ivy {
                 name = "Node.js"
-                setUrl("https://nodejs.org/dist/")
+                url = "https://nodejs.org/dist/"
                 patternLayout {
                     artifact("v[revision]/[artifact](-v[revision]-[classifier]).[ext]")
-                    ivy("v[revision]/ivy.xml")
                 }
                 metadataSources {
                     artifact()
