--- a/.github/workflows/build-examples.yml
+++ b/.github/workflows/build-examples.yml
@@ -16,3 +16,5 @@ jobs:
         run: ./gradlew -p examples/simple-node helloWorld
       - name: Build Spring Boot Angular Project
         run: ./gradlew -p examples/spring-boot-angular build
+      - name: Build Vert.x React Project
+        run: ./gradlew -p examples/vertx-react build
