--- a/.github/workflows/update-javadoc.yml
+++ b/.github/workflows/update-javadoc.yml
@@ -14,7 +14,7 @@ jobs:
         with:
           java-version: 8
       - name: Build Javadoc
-        run: ./gradlew dokka
+        run: ./gradlew dokkaJavadoc
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
         with:
