--- a/.github/workflows/update-javadoc.yml
+++ b/.github/workflows/update-javadoc.yml
@@ -19,4 +19,4 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: ./build/dokka
+          publish_dir: ./build/dokka/javadoc
