Change back to setUrl() for kotlin/groovy compatibility. #134
url = "foo" doesn't work in kotlin, so while this doesn't
look that great, it does work in both languages.

--- a/src/test/resources/fixtures/node-fail-on-project-repos-download/settings.gradle
+++ b/src/test/resources/fixtures/node-fail-on-project-repos-download/settings.gradle
@@ -8,7 +8,7 @@ if (GradleVersion.current() >= GradleVersion.version("6.8")) {
 
             ivy {
                 name = "Node.js"
-                url = "https://nodejs.org/dist/"
+                setUrl("https://nodejs.org/dist/")
                 patternLayout {
                     artifact("v[revision]/[artifact](-v[revision]-[classifier]).[ext]")
                 }
