#144 Group the tasks hooks into a single property. Add Kotlin DSL support.

--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -53,11 +53,13 @@ if (outputFile) {
 }
 
 if (enableHooks) {
-    env.onSuccess {
-        println("Env task success with status ${it.getExitValue()}")
-    }
-    env.onFailure {
-        println("Env task failure with error ${it.getMessage()}")
+    env.hooks {
+        onSuccess {
+            println("Env task success with status ${it.getExitValue()}")
+        }
+        onFailure {
+            println("Env task failure with error ${it.getMessage()}")
+        }
     }
 }
 
