--- a/src/test/resources/fixtures/npx-env/build.gradle
+++ b/src/test/resources/fixtures/npx-env/build.gradle
@@ -56,11 +56,13 @@ if (isPropertyEnabled("outputFile")) {
 }
 
 if (isPropertyEnabled("enableHooks")) {
-    env.onSuccess {
-        println("Env task success with status ${it.getExitValue()}")
-    }
-    env.onFailure {
-        println("Env task failure with error ${it.getMessage()}")
+    env.hooks {
+        onSuccess {
+            println("Env task success with status ${it.getExitValue()}")
+        }
+        onFailure {
+            println("Env task failure with error ${it.getMessage()}")
+        }
     }
 }
 
