#159 Speed up build by no longer running the integration tests on multiple Gradle versions on Windows and macOS runners that are slower than the Linux ones.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
-        run: ./gradlew build -PtestMinimumSupportedGradleVersion=true -PtestCurrentGradleVersion=true
+        run: ./gradlew build
   macos:
     runs-on: macos-latest
     steps:
@@ -39,4 +39,4 @@ jobs:
       - name: Gradle Version
         run: ./gradlew --version
       - name: Build
-        run: ./gradlew build -PtestAllSupportedGradleVersions=true
+        run: ./gradlew build
