#144 Change the behavior of the onFailure hook. It is now only triggered when the Node command exited with failure status and the task is not configured to ignore exit status.

--- a/src/test/resources/fixtures/npm-env/build.gradle
+++ b/src/test/resources/fixtures/npm-env/build.gradle
@@ -63,7 +63,7 @@ if (isPropertyEnabled("enableHooks")) {
             println("Env task success with status ${it.getExitValue()}")
         }
         onFailure {
-            println("Env task failure with error ${it.getMessage()}")
+            println("Env task failure with status ${it.getExitValue()}")
         }
     }
 }
