--- a/src/test/resources/fixtures/node-env/build.gradle
+++ b/src/test/resources/fixtures/node-env/build.gradle
@@ -58,7 +58,7 @@ if (enableHooks) {
             println("Env task success with status ${it.getExitValue()}")
         }
         onFailure {
-            println("Env task failure with error ${it.getMessage()}")
+            println("Env task failure with status ${it.getExitValue()}")
         }
     }
 }
